--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,6 +35,7 @@
   --color-baseColor: oklch(0.74 0.0841 240.59);
   --color-baseColor2: oklch(0.76 0.1456 32.82);
 
+  --shadow-custom: 7px 7px 4px 1px rgba(0, 0, 0, 1);
 }
 
 :root {
@@ -46,4 +47,5 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
