adding fonts, setting a overflow-x, animated header,

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,11 +39,11 @@
 }
 
 :root {
-  --background: #ffffff;
+  /* --background: #ffffff; */
   --foreground: #171717;
 }
 
-body {
+html, body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
