--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,6 +46,6 @@
 html, body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Montserrat;
   overflow-x: hidden;
 }
